<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="2">
		<!-- 上部分 -->
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:orientation="vertical" >
	        
	        <RelativeLayout
			    android:id="@+id/loginlay_logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerInParent="true"
			    android:layout_alignParentTop="true">
			    
	           	<!-- LOGO图标 -->
				<ImageView 
				    android:id="@+id/login_logo"
				    android:layout_width="150dp"
				    android:layout_height="150dp"
				    android:layout_marginTop="20dp"
				    android:layout_centerHorizontal="true"
				    android:src="@drawable/ic_launcher"  />
			</RelativeLayout>
			
	        <!-- 信息填写布局 -->
			<LinearLayout
			    android:layout_below="@+id/loginlay_logo"
			    android:layout_marginTop="20dp"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" >
			    
			    <!-- 用户名信息栏 布局-->
				<LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView
					    android:id="@+id/login_user_input"
					    style="@style/normalText"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginRight="10dp"
					    android:text="@string/login_label_username" 
					    android:textColor="#ffffff"
					    android:textSize="20sp"/>
				    <AutoCompleteTextView 
				        android:id="@+id/username_edit"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/login_username_hint"
				        android:inputType="text"
				        android:singleLine="true"/>
				</LinearLayout>
				
				<!-- 密码信息栏布局 -->
				<LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
	
					<TextView
					    android:id="@+id/login_password_input"
					    style="@style/normalText"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginRight="10dp"
					    android:text="@string/login_label_password" 
					    android:textColor="#ffffff"
					    android:textSize="20sp"/>
					<EditText
					    android:id="@+id/password_edit"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:hint="@string/login_passwords_hint"
					    android:inputType="textPassword"
					    android:password="true"
					    android:singleLine="true" />
				</LinearLayout>
				
				<!-- 登陆按钮 -->
				<Button
				    android:id="@+id/signin_button"
				    android:layout_width="fill_parent"
				    android:layout_height="40dp"
				    android:layout_marginTop="10dp"
				    android:background="@drawable/background_login_button"
				    android:text="@string/login_label_signin"
				    android:textSize="20sp"
				    android:textColor="#ffffff"/>
			</LinearLayout>
	    </RelativeLayout>
    </ScrollView>

    <!-- 下部分 -->
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="7"
		android:orientation="horizontal" >
		
	    <!-- 注册按钮 -->
		<TextView
			android:id="@+id/logon_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="right"  
			android:clickable="true"
			android:text="@string/register"
			android:textColor="#ffffff"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="10dip" 
			android:layout_alignParentBottom="true" 
			android:layout_alignParentRight="true" 
			android:textSize="15sp"/>
		<!-- 记住密码 -->
		<CheckBox
		    android:id="@+id/savepasswordcb"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignBaseline="@id/logon_button"
		    android:layout_alignParentLeft="true"
		    android:layout_marginLeft="10dp"
		    android:text="@string/Remember"
		    android:checked="true"
		    android:textColor="#ffffff"
		    android:textSize="15sp"/>
                
	</RelativeLayout>
</LinearLayout>
